--- a/_data/walks.yml
+++ b/_data/walks.yml
@@ -29,6 +29,21 @@
   date: 2015-01-01
   desc: 身在西湖中.
 
+- path: IMG_0139.jpg
+  type: picture
+  date: 2014-12-18
+  desc: 没什么人影, 拍戏都晚上才拍麽.
+
+- path: IMG_0137.jpg
+  type: picture
+  date: 2014-12-18
+  desc: 有点古代的气息.
+
+- path: IMG_0134.jpg
+  type: picture
+  date: 2014-12-18
+  desc: 横店果真是宫剧的基地.
+
 - path: IMG_0241.jpg
   type: picture
   date: 2014-11-02
