--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 port : '9999'
-enchode : 'utf-8'
-paginate: 10
+encode : 'utf-8'
+paginate: 100
 paginate_path: "page:num"
 excerpt_separator: "\n\n"
